--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,5 +1,26 @@
 {
-    "app-title": "Заметки",
-    "rename": "Переименвать",
-    "remove": "Удалить"
+  "app-title": "Заметки",
+  "language": "Изменить язык",
+  "rename": "Переименовать",
+  "delete": "Удалить",
+  "change-color": "Изменить цвет",
+  "sort": {
+    "title": "Сортировка",
+    "subtitle": "По дате и времени:",
+    "old": "сначала старые",
+    "new": "сначала новые"
+  },
+  "filter": {
+    "title": "Фильтр",
+    "subtitle": "По дате:",
+    "even": "четные",
+    "uneven": "нечетные"
+  },
+  "modal": {
+    "section-title": "Заголовок секции",
+    "note-title": "Заголовок",
+    "note-text": "Текст заметки",
+    "note-date": "Дата",
+    "add": "Добавить"
+  }
 }
